# idn-area-etl

./: .gitignore  AGENTS.md  README.md  idnareaetl.toml  makefile  pyproject.toml  pyrightconfig.json  ruff.toml
.agent/rules/: coding.md  testing.md
.agent/workflows/: development.md
src/idn_area_etl/: cli.py  config.py  extractors.py  ground_truth.py  idnareaetl.toml  normalizer.py  remote.py  utils.py  validator.py  writer.py
src/idn_area_extractor/: cli.py
tests/: README.md  conftest.py  test_camelot_tempdir.py  test_cli.py  test_config.py  test_csv_encoding_bugs.py  test_dataframe_processing.py  test_e2e.py  test_extractors.py  test_file_operations.py  test_ground_truth.py  test_mocking_integration.py  test_normalizer.py  test_remote.py  test_runner.py  test_text_processing.py  test_utils.py  test_validator.py  test_writer.py
tests/fixtures/: dirty_island.csv  dirty_province.csv  dirty_regency.csv  expected_district.csv  expected_island.csv  expected_province.csv  expected_regency.csv  expected_village.csv
